[gd_scene load_steps=6 format=3 uid="uid://cgfpuhagd2pke"]

[ext_resource type="Theme" uid="uid://bmf31mho1mjjt" path="res://addons/sprout_lands_ui/content/sprout_lands_theme.tres" id="1_bqqt6"]
[ext_resource type="Script" uid="uid://v7err6cqo0y1" path="res://scripts/main_menu.gd" id="2_ekxnf"]
[ext_resource type="PackedScene" uid="uid://ovu1hbcclfqq" path="res://scenes/dialog.tscn" id="3_bqqt6"]

[sub_resource type="SystemFont" id="SystemFont_bqqt6"]

[sub_resource type="Theme" id="Theme_wu84c"]
default_font = SubResource("SystemFont_bqqt6")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bqqt6")
script = ExtResource("2_ekxnf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.5
offset_top = -240.0
offset_right = 228.5
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Godot Multiplayer Example"

[node name="UsernameEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -130.0
offset_right = 150.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Choose your username"
alignment = 1
max_length = 16
caret_blink = true

[node name="IPAddressEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -536.0
offset_top = 40.0
offset_right = -124.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter IP Address (127.0.0.1 by default)"
alignment = 1
max_length = 15
caret_blink = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -49.0
offset_right = 88.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Host"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Join"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
text = "Exit
"

[node name="Dialog" parent="." instance=ExtResource("3_bqqt6")]
layout_mode = 1
theme = SubResource("Theme_wu84c")

[connection signal="text_changed" from="UsernameEdit" to="." method="_on_username_edit_text_changed"]
[connection signal="text_changed" from="IPAddressEdit" to="." method="_on_ip_address_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
